Revert "fix: report intensity location too close"
This reverts commit b5a6b2a4b0142506b21b9b7d12d12093501c7310.

consider consistency, add margin on intensity instead of location

--- a/TREM.Electron/css/index.css
+++ b/TREM.Electron/css/index.css
@@ -1751,8 +1751,9 @@ button.hide + #report-detail-header-title {
 	margin-right: 8px;
 }
 
-#report-overview-intensity-location {
-	margin-left: 8px;
+#report-overview-intensity.strong,
+#report-overview-intensity.weak {
+	margin-right: 8px;
 }
 
 #report-overview-intensity.strong::after {
